@@ -1,14 +1,0 @@
-local modinfo = {
-	name			= 'Spring: 1944 equilibrio',
-	shortName		= 'S44',
-	version			= 'dev-$VERSION',
-	game			= 'Spring: 1944',
-	shortGame		= 'S44',
-	mutator			= 'not Official',
-	description		= 'Epic World War II RTS! (with balance)',
-	url				= 'http://www.spring1944.net/',
-	modtype			= '1',
-	depend =	{"Spring: 1944 $VERSION"},
-}
-
-return modinfo
