@@ -33,7 +33,7 @@
   noChaseCategory=FLAG AIR MINE HARDVEH BUILDING;
   objectName=JPNKurogane.S3O;
   script=JPNKurogane.lua;
-  releaseHeld=0;
+  canattack=0;
   seismicSignature=0;
   selfDestructAs=Vehicle_Explosion_Sm;
   [sfxtypes] {
@@ -60,7 +60,7 @@
   turnRate=405;
   badTargetCategory=FLAG;
 
-  weapon1=binocs;
+  weapon1=binocs2;
   onlyTargetCategory1=NONE;
 
 }
